LPS-38477 Increases left panels z-indexes to prevent over elements from covering it

--- a/portal-web/docroot/html/css/portal/add_content.css
+++ b/portal-web/docroot/html/css/portal/add_content.css
@@ -8,7 +8,7 @@
 	position: fixed;
 	top: 0;
 	width: 330px;
-	z-index: 450;
+	z-index: 1002;
 
 	.add-content-menu .lfr-add-page-toolbar {
 		bottom: 0;
